llvm/dev/boolcall2.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/boolcall2.llvm:12:1: error: expected instruction opcode
}
^
